<resources>
    <string name="app_name">RB-Sol Chat</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="user_is_empty">Please enter username!</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sample_message">Hello!</string>
    <string name="name">Name</string>
    <string name="offline">Offline</string>
    <string name="todo">TODO</string>
    <string name="hint_message">Type a message ...</string>
    <string name="attachment">attachmentImageView</string>
    <string name="camera">cameraImageview</string>
    <string name="send">sendButton</string>



    <string name="webClientId">186315287414-50kuf8bvmqnenom6gptkoc4e07fk53vv.apps.googleusercontent.com</string>


</resources>