<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/ic_login_vector">
    </ImageView>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />



    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="registerNewUser"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_google_button"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_google_icon_01" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/login_facebook_button"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_facebook_logo" />

    </LinearLayout>

</LinearLayout>
